# AuthentiFind

./: Cargo.toml  README.md  Setup.md  authentifind.db  authentifind.db-shm  authentifind.db-wal
migrations/: 20250821223713_create_items_table.sql
src/: ledger.rs  main.rs  scraper.rs
