[package]
name = "AuthentiFind"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.12"
scraper = "0.19"
headless_chrome = "1.0.17"
urlencoding = "2.1.3"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
dotenvy = "0.15" # For managing the .env file
